# morex-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  users.sql
data/: emojis.json
src/: commands.rs  config.rs  main.rs  morex.rs
src/commands/: balance.rs  ping.rs
src/discord/: emojis.rs
src/morex/: account.rs  economy.rs
src/mx/: handler.rs  mod.rs  morex.rs
src/mx/commands/: balance.rs  mod.rs  ping.rs
src/mx/economy/: accounts.rs  balance.rs  mod.rs
src/mx/managers/: commands_manager.rs  data_base_manager.rs  mod.rs
