[package]
name = "morex-rs"
version = "0.2.0"
license = "MIT"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
serenity = "0.12.5"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
chrono = "0.4.44"
base64 = "0.22.1"
image = "0.25.10"
sha2 = "0.11.0"
hex = "0.4.3"
serde = "1.0.228"
serde_json = "1.0.149"
